--- a/src/App.css
+++ b/src/App.css
@@ -1,69 +1,74 @@
-
 .square {
   aspect-ratio: 1/ 1;
   display: flex;
   align-items: center;
   padding: 5%;
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   color: #fff;
-  
 }
 
-.rect {
+.hrect {
+  aspect-ratio: 1/ 2;
+  display: flex;
+  align-items: center;
+  padding: 5%;
+  background-color: #1e1e1e;
+  color: #fff;
+}
+
+.vrect {
   aspect-ratio: 2/ 1;
   display: flex;
   align-items: center;
   padding: 5%;
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   color: #fff;
 }
 
-.grid {
-height:100%;
-width:50%;
+.container {
+  height: 100%;
+  width: 50%;
 }
 
-.col {
-  padding: 0; 
-  margin: 0;
-}
-
-.col-sm-3 {
-  padding: 0; 
+[class^="col-"],
+div[class*=" col-"],
+.col,
+.row {
+  padding: 0;
   margin: 0;
 }
 
 .btn-Primary {
-  width:100%;
+  width: 100%;
   height: 100%;
-  font-size: 5vw ;
+  font-size: 5vw;
   border-radius: 50%;
-  background-color: grey;
+  background-color: DimGray;
   color: white;
   &:hover {
-    background-color: grey;
+    background-color: DimGray;
     color: white;
   }
   &:focus {
-    background-color: grey;
+    background-color: DimGray;
     color: white;
   }
   &.active {
     &:hover {
-      background-color: grey;
+      background-color: DimGray;
       color: white;
     }
     &:focus {
-      background-color: grey;
+      background-color: DimGray;
       color: white;
     }
   }
 }
 
 .btn-Secondary {
-  width:100%;
+  width: 100%;
   height: 100%;
-  font-size: 5vw ;
+  font-size: 5vw;
   border-radius: 50%;
   background-color: orange;
   color: white;
@@ -87,13 +92,40 @@ width:50%;
   }
 }
 
+.btn-Info {
+  width: 100%;
+  height: 100%;
+  font-size: 5vw;
+  border-radius: 50%;
+  background-color: grey;
+  color: black;
+  &:hover {
+    background-color: grey;
+    color: black;
+  }
+  &:focus {
+    background-color: grey;
+    color: black;
+  }
+  &.active {
+    &:hover {
+      background-color: grey;
+      color: black;
+    }
+    &:focus {
+      background-color: grey;
+      color: black;
+    }
+  }
+}
 
-.display{
+.display {
   aspect-ratio: 4/ 1;
   display: flex;
-  font-size: 5vw ;
+  font-size: 5vw;
   align-items: center;
+  justify-content: end;
   padding: 5%;
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   color: #fff;
 }
