--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,41 @@ div[class*=" col-"],
   margin: 0;
 }
 
+.btn-Success {
+  width: 100%;
+  height: 100%;
+  font-size: 150%;
+  padding: 0;
+  margin: 0;
+  border-radius: 50%;
+  background-color: white;
+  color: orange;
+  &:hover {
+    background-color: white;
+    color: orange;
+  }
+  &:focus {
+    background-color: white;
+    color: orange;
+  }
+  &.active {
+    &:hover {
+      background-color: white;
+      color: orange;
+    }
+    &:focus {
+      background-color: white;
+      color: orange;
+    }
+  }
+}
+
 .btn-Primary {
   width: 100%;
   height: 100%;
-  font-size: 100%;
+  font-size: 150%;
+  padding: 0;
+  margin: 0;
   border-radius: 50%;
   background-color: DimGray;
   color: white;
@@ -68,7 +99,9 @@ div[class*=" col-"],
 .btn-Secondary {
   width: 100%;
   height: 100%;
-  font-size: 100%;
+  font-size: 150%;
+  padding: 0;
+  margin: 0;
   border-radius: 50%;
   background-color: orange;
   color: white;
@@ -95,7 +128,9 @@ div[class*=" col-"],
 .btn-Info {
   width: 100%;
   height: 100%;
-  font-size: 100%;
+  font-size: 150%;
+  padding: 0;
+  margin: 0;
   border-radius: 50%;
   background-color: grey;
   color: black;
